TEZ-HIVE-HUE work fine (#5)